// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests components Gallery 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    "My Pic 1",
                  ],
                  "props": Object {
                    "href": "https://picsum.photos/200/300",
                    "target": "_blank",
                  },
                  "type": "a",
                },
              ],
              "type": "p",
            },
          ],
          "type": "div",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "children": Array [
                            Object {
                              "props": Object {
                                "alt": "My Pic 1",
                                "src": "https://picsum.photos/200/300",
                              },
                              "type": "img",
                            },
                          ],
                          "type": "div",
                        },
                      ],
                      "type": "div",
                    },
                  ],
                  "type": "div",
                },
                Object {
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "children": Array [
                            Object {
                              "props": Object {
                                "alt": "My Pic 2",
                                "src": "https://picsum.photos/200/300",
                              },
                              "type": "img",
                            },
                          ],
                          "type": "div",
                        },
                      ],
                      "type": "div",
                    },
                  ],
                  "type": "div",
                },
                Object {
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "children": Array [
                            Object {
                              "props": Object {
                                "alt": "My Pic 3",
                                "src": "https://picsum.photos/200/300",
                              },
                              "type": "img",
                            },
                          ],
                          "type": "div",
                        },
                      ],
                      "type": "div",
                    },
                  ],
                  "type": "div",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "type": "path",
                    },
                  ],
                  "props": Object {
                    "data-testid": "KeyboardArrowLeftIcon",
                    "role": undefined,
                  },
                  "type": "svg",
                },
                "Back",
              ],
              "props": Object {
                "type": "button",
              },
              "type": "button",
            },
            Object {
              "children": Array [
                Object {
                  "type": "span",
                },
              ],
              "props": Object {
                "role": "progressbar",
              },
              "type": "span",
            },
            Object {
              "children": Array [
                "Next",
                Object {
                  "children": Array [
                    Object {
                      "type": "path",
                    },
                  ],
                  "props": Object {
                    "data-testid": "KeyboardArrowRightIcon",
                    "role": undefined,
                  },
                  "type": "svg",
                },
              ],
              "props": Object {
                "type": "button",
              },
              "type": "button",
            },
          ],
          "type": "div",
        },
        Object {
          "children": Array [
            "Click image to enlarge",
          ],
          "type": "h6",
        },
      ],
      "type": "div",
    },
  ],
  "type": "div",
}
`;

exports[`Tests components Objectives 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    "One",
                  ],
                  "type": "span",
                },
              ],
              "type": "div",
            },
          ],
          "type": "li",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    "Two",
                  ],
                  "type": "span",
                },
              ],
              "type": "div",
            },
          ],
          "type": "li",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    "Three",
                  ],
                  "type": "span",
                },
              ],
              "type": "div",
            },
          ],
          "type": "li",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    "Four",
                  ],
                  "type": "span",
                },
              ],
              "type": "div",
            },
          ],
          "type": "li",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    "Five",
                  ],
                  "type": "span",
                },
              ],
              "type": "div",
            },
          ],
          "type": "li",
        },
      ],
      "props": Object {
        "aria-label": "secondary",
      },
      "type": "nav",
    },
  ],
  "type": "div",
}
`;

exports[`Tests components Section 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "type": "i",
                    },
                    "My Accordion heading",
                  ],
                  "type": "div",
                },
              ],
              "type": "p",
            },
          ],
          "type": "div",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                "expand_more",
              ],
              "type": "span",
            },
          ],
          "type": "div",
        },
      ],
      "props": Object {
        "role": "button",
        "type": undefined,
      },
      "type": "div",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "children": Array [
                            "My inner content",
                          ],
                          "type": "h1",
                        },
                      ],
                      "type": "div",
                    },
                  ],
                  "props": Object {
                    "aria-labelledby": undefined,
                    "role": "region",
                  },
                  "type": "div",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  "type": "div",
}
`;

exports[`Tests components SocialMedia renders service when both icon and name are provided 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "i",
                },
                Object {
                  "type": "span",
                },
              ],
              "props": Object {
                "type": "button",
              },
              "type": "button",
            },
          ],
          "props": Object {
            "aria-label": "Facebook",
            "aria-labelledby": null,
            "href": "https://www.facebook.com",
            "target": "_blank",
          },
          "type": "a",
        },
      ],
      "props": Object {
        "data-testid": "social-media-redirect-dialog",
      },
      "type": "div",
    },
  ],
  "type": "div",
}
`;

exports[`Tests components SocialMedia renders with URL and icon 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "i",
                },
                Object {
                  "type": "span",
                },
              ],
              "props": Object {
                "type": "button",
              },
              "type": "button",
            },
          ],
          "props": Object {
            "aria-label": "Facebook",
            "aria-labelledby": null,
            "href": "https://www.facebook.com",
            "target": "_blank",
          },
          "type": "a",
        },
      ],
      "props": Object {
        "data-testid": "social-media-redirect-dialog",
      },
      "type": "div",
    },
  ],
  "type": "div",
}
`;

exports[`Tests components SocialMedia renders with URL and icon with tooltip 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "i",
                },
                Object {
                  "type": "span",
                },
              ],
              "props": Object {
                "type": "button",
              },
              "type": "button",
            },
          ],
          "props": Object {
            "aria-label": "Facebook",
            "aria-labelledby": null,
            "href": "https://www.facebook.com",
            "target": "_blank",
          },
          "type": "a",
        },
      ],
      "props": Object {
        "data-testid": "social-media-redirect-dialog",
      },
      "type": "div",
    },
  ],
  "type": "div",
}
`;

exports[`Tests components SocialMedia renders with URL and icon with tooltip and name 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "i",
                },
                Object {
                  "children": Array [
                    "test",
                  ],
                  "type": "div",
                },
                Object {
                  "type": "span",
                },
              ],
              "props": Object {
                "type": "button",
              },
              "type": "button",
            },
          ],
          "props": Object {
            "aria-label": "https://www.facebook.com",
            "aria-labelledby": null,
            "href": "https://www.facebook.com",
            "target": "_blank",
          },
          "type": "a",
        },
      ],
      "props": Object {
        "data-testid": "social-media-redirect-dialog",
      },
      "type": "div",
    },
  ],
  "type": "div",
}
`;

exports[`Tests components SocialMedia renders with URL and name 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "i",
                },
                Object {
                  "type": "span",
                },
              ],
              "props": Object {
                "type": "button",
              },
              "type": "button",
            },
          ],
          "props": Object {
            "aria-label": "Facebook",
            "aria-labelledby": null,
            "href": "https://www.facebook.com",
            "target": "_blank",
          },
          "type": "a",
        },
      ],
      "props": Object {
        "data-testid": "social-media-redirect-dialog",
      },
      "type": "div",
    },
  ],
  "type": "div",
}
`;

exports[`Tests components SocialMedia renders with URL with no name but url instead 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "i",
                },
                Object {
                  "children": Array [
                    "Facebook",
                  ],
                  "type": "div",
                },
                Object {
                  "type": "span",
                },
              ],
              "props": Object {
                "type": "button",
              },
              "type": "button",
            },
          ],
          "props": Object {
            "aria-label": "Facebook",
            "aria-labelledby": null,
            "href": "https://www.facebook.com",
            "target": "_blank",
          },
          "type": "a",
        },
      ],
      "props": Object {
        "data-testid": "social-media-redirect-dialog",
      },
      "type": "div",
    },
  ],
  "type": "div",
}
`;

exports[`Tests components SocialMedia renders with URL, confirmation dialog, and icon 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "i",
                },
                Object {
                  "type": "span",
                },
              ],
              "props": Object {
                "type": "button",
              },
              "type": "button",
            },
          ],
          "props": Object {
            "aria-label": "Facebook",
            "aria-labelledby": null,
            "href": "https://www.facebook.com",
            "target": "_blank",
          },
          "type": "a",
        },
      ],
      "props": Object {
        "data-testid": "social-media-redirect-dialog",
      },
      "type": "div",
    },
  ],
  "type": "div",
}
`;

exports[`Tests components SocialMedia renders with URL, confirmation dialog, and name 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "i",
                },
                Object {
                  "type": "span",
                },
              ],
              "props": Object {
                "type": "button",
              },
              "type": "button",
            },
          ],
          "props": Object {
            "aria-label": "Facebook",
            "aria-labelledby": null,
            "href": "https://www.facebook.com",
            "target": "_blank",
          },
          "type": "a",
        },
      ],
      "props": Object {
        "data-testid": "social-media-redirect-dialog",
      },
      "type": "div",
    },
  ],
  "type": "div",
}
`;

exports[`Tests components SocialMedia renders with URL, confirmation dialog, and showName 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "i",
                },
                Object {
                  "children": Array [
                    "Facebook",
                  ],
                  "type": "div",
                },
                Object {
                  "type": "span",
                },
              ],
              "props": Object {
                "type": "button",
              },
              "type": "button",
            },
          ],
          "props": Object {
            "aria-label": "Facebook",
            "aria-labelledby": null,
            "href": "https://www.facebook.com",
            "target": "_blank",
          },
          "type": "a",
        },
      ],
      "props": Object {
        "data-testid": "social-media-redirect-dialog",
      },
      "type": "div",
    },
  ],
  "type": "div",
}
`;

exports[`Tests components SocialMedia renders with only URL 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "i",
                },
                Object {
                  "type": "span",
                },
              ],
              "props": Object {
                "type": "button",
              },
              "type": "button",
            },
          ],
          "props": Object {
            "aria-label": "Example",
            "aria-labelledby": null,
            "href": "https://example.com",
            "target": "_blank",
          },
          "type": "a",
        },
      ],
      "props": Object {
        "data-testid": "social-media-redirect-dialog",
      },
      "type": "div",
    },
  ],
  "type": "div",
}
`;

exports[`Tests components Status renders status CARD correctly 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "children": Array [
                            Object {
                              "type": "path",
                            },
                          ],
                          "props": Object {
                            "data-testid": "CheckCircleIcon",
                            "role": undefined,
                          },
                          "type": "svg",
                        },
                      ],
                      "type": "div",
                    },
                  ],
                  "type": "div",
                },
                Object {
                  "children": Array [
                    "Online",
                  ],
                  "type": "div",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "children": Array [
            "This service is currently",
            "online",
            "at",
            Object {
              "children": Array [
                "www.google.com",
              ],
              "props": Object {
                "href": "https://www.google.com",
                "target": "_blank",
              },
              "type": "a",
            },
          ],
          "type": "h6",
        },
      ],
      "type": "div",
    },
  ],
  "type": "div",
}
`;

exports[`Tests components Status renders status CARD correctly when it's offline 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "children": Array [
                            Object {
                              "type": "path",
                            },
                          ],
                          "props": Object {
                            "data-testid": "CancelIcon",
                            "role": undefined,
                          },
                          "type": "svg",
                        },
                      ],
                      "type": "div",
                    },
                  ],
                  "type": "div",
                },
                Object {
                  "children": Array [
                    "Offline",
                  ],
                  "type": "div",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        Object {
          "children": Array [
            "This service is currently",
            "offline",
            "at",
            Object {
              "children": Array [
                "www.google.com",
              ],
              "props": Object {
                "href": "https://www.google.com",
                "target": "_blank",
              },
              "type": "a",
            },
          ],
          "type": "h6",
        },
      ],
      "type": "div",
    },
  ],
  "type": "div",
}
`;

exports[`Tests components Status renders status DOT correctly 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            "Badge",
          ],
          "type": "span",
        },
        Object {
          "type": "span",
        },
      ],
      "type": "span",
    },
  ],
  "type": "div",
}
`;

exports[`Tests components Status renders status DOT correctly when it's offline 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            "Badge",
          ],
          "type": "span",
        },
        Object {
          "type": "span",
        },
      ],
      "type": "span",
    },
  ],
  "type": "div",
}
`;

exports[`Tests components Tags 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            "tag",
          ],
          "type": "span",
        },
        Object {
          "children": Array [
            "Test-Driven Development",
          ],
          "type": "span",
        },
      ],
      "type": "div",
    },
  ],
  "type": "div",
}
`;

exports[`Tests components Timeline renders step count 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "children": Array [
                            Object {
                              "type": "circle",
                            },
                            Object {
                              "children": Array [
                                "1",
                              ],
                              "type": "text",
                            },
                          ],
                          "props": Object {
                            "role": undefined,
                          },
                          "type": "svg",
                        },
                      ],
                      "type": "span",
                    },
                    Object {
                      "children": Array [
                        Object {
                          "children": Array [
                            Object {
                              "children": Array [
                                "When clocks started to count up!",
                              ],
                              "type": "p",
                            },
                          ],
                          "type": "span",
                        },
                        Object {
                          "children": Array [
                            "December 31, 1969",
                          ],
                          "type": "span",
                        },
                      ],
                      "type": "span",
                    },
                  ],
                  "type": "span",
                },
              ],
              "type": "div",
            },
            Object {
              "children": Array [
                Object {
                  "type": "span",
                },
              ],
              "type": "div",
            },
            Object {
              "children": Array [
                Object {
                  "children": Array [
                    Object {
                      "children": Array [
                        Object {
                          "children": Array [
                            Object {
                              "type": "circle",
                            },
                            Object {
                              "children": Array [
                                "2",
                              ],
                              "type": "text",
                            },
                          ],
                          "props": Object {
                            "role": undefined,
                          },
                          "type": "svg",
                        },
                      ],
                      "type": "span",
                    },
                    Object {
                      "children": Array [
                        Object {
                          "children": Array [
                            Object {
                              "children": Array [
                                "The day of reckoning...",
                              ],
                              "type": "p",
                            },
                          ],
                          "type": "span",
                        },
                        Object {
                          "children": Array [
                            "January 1, 1970",
                          ],
                          "type": "span",
                        },
                      ],
                      "type": "span",
                    },
                  ],
                  "type": "span",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  "type": "div",
}
`;

exports[`Tests components YouTubeEmbed 1`] = `
Object {
  "children": Array [
    Object {
      "props": Object {
        "src": "https://www.youtube-nocookie.com/embed/dQw4w9WgXcQ",
        "title": "dQw4w9WgXcQ",
      },
      "type": "iframe",
    },
  ],
  "type": "div",
}
`;
